--- a/gallery.html
+++ b/gallery.html
@@ -23,16 +23,21 @@
         <!-- Desktop Navbar -->
         <nav>
             <ul class="navbar">
+                <section>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
+            </section>
+
+            <section>
                 <li>
                     <a href="https://www.instagram.com/limitless.baseball/" target="_blank">
                         <img src="images/instagram_icon.png" alt="Instagram"> @limitless.baseball
                     </a>
                 </li>
                 <li><a href="https://calendly.com/limitlessbaseball-ut" class="btn">Book Lesson</a></li>
+            </section>
             </ul>
         </nav>
 
@@ -49,6 +54,12 @@
     </header>
     <main>
         <!-- Main Content Placeholder -->
+
+
+
+
+
+
     </main>
     <footer>
         <!-- Footer Content -->
