--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     @limitless.baseball
                 </a>
                 <p>801-663-6556</p>
-                <p>limitlessbaseball.ut@gmail.com</p>
+                <p><a href="mailto:limitlessbaseball.ut@gmail.com">limitlessbaseball.ut@gmail.com</a></p>
             </div>
         </section>
             <div class="copy-write">
