--- a/gallery.html
+++ b/gallery.html
@@ -55,8 +55,13 @@
     <main>
         <!-- Main Content Placeholder -->
 
-
-
+        <section class="gallery-page" style="background-color: black;">
+            <h2> Gallery</h2>
+        <div class="gallery-container">
+            <!-- Replace the iframe source with the LightWidget code -->
+            <iframe src="https://lightwidget.com/widgets/your-widget-id.html" scrolling="no" allowtransparency="true"></iframe>
+        </div>    
+    </section>
 
 
 
@@ -75,7 +80,7 @@
                     @limitless.baseball
                 </a>
                 <p>801-663-6556</p>
-                <p>limitlessbaseball.ut@gmail.com</p>
+                <p><a href="mailto:limitlessbaseball.ut@gmail.com">limitlessbaseball.ut@gmail.com</a></p>
             </div>
         </section>
             <div class="copy-write">
