--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
         
                     <div class="special-requests">
                         <h3>Special Requests</h3>
-                        <form action="#" method="post">
+                        <form id="special-request-form" method="post">
                             <label for="full-name">Full Name</label>
                             <input type="text" id="full-name" name="full-name" placeholder="Enter Name" required>
         
@@ -154,6 +154,7 @@
     </footer>
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script src="js/index.js"></script>
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
 </body>
 </html>
 
