--- a/gallery.html
+++ b/gallery.html
@@ -58,10 +58,12 @@
         <section class="gallery-page" style="background-color: black;">
             <h2> Gallery</h2>
         <div class="gallery-container">
-            <!-- Replace the iframe source with the LightWidget code -->
-            <iframe src="https://lightwidget.com/widgets/your-widget-id.html" scrolling="no" allowtransparency="true"></iframe>
+            <!-- LightWidget WIDGET -->
+            <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
+            <iframe src="//lightwidget.com/widgets/cba9ca4441aa51bca7326a1a7d801afb.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
         </div>    
     </section>
+
 
 
 
