--- a/gallery.html
+++ b/gallery.html
@@ -55,16 +55,18 @@
     <main>
         <!-- Main Content Placeholder -->
 
-        <section class="gallery-page" style="background-color: black;">
-            <h2> Gallery</h2>
+
+        <section class="section-gallery" style="background-color: black;">
+            <h2> GALLERY</h2>
         <div class="gallery-container">
             <!-- LightWidget WIDGET -->
             <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
             <iframe src="//lightwidget.com/widgets/cba9ca4441aa51bca7326a1a7d801afb.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
         </div>    
-    </section>
+        </section>
 
 
+        
 
 
     </main>
