--- a/contact.html
+++ b/contact.html
@@ -100,9 +100,19 @@
                       <h2 class="text-center">Find Us</h2>
                       <p class="text-center">939 West 1600 South unit 9, Clearfield, UT, 84015</p>
                       <div class="google-map">
-                        <iframe src="https://maps.googleapis.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.9455437673593!2d-112.05154399999999!3d41.015021!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x874919630879e29d%3A0x76b04086c22e899f!2s939%20West%201600%20South%20unit%209%2C%20Clearfield%2C%20UT%2C%2084015!5e0!3m2!1sen!2sus!4v1694363391055!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>              </div>
+                        <iframe
+                          src="https://maps.googleapis.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.9455437673593!2d-112.05154399999999!3d41.015021!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x874919630879e29d%3A0x76b04086c22e899f!2s939%20West%201600%20South%20unit%209%2C%20Clearfield%2C%20UT%2C%2084015!5e0!3m2!1sen!2sus!4v1694363391055!5m2!1sen!2sus"
+                          width="100%"
+                          height="400"
+                          style="border:0;"
+                          allowfullscreen=""
+                          loading="lazy"
+                          referrerpolicy="no-referrer-when-downgrade"
+                        ></iframe>
+                      </div>
                     </div>
                   </section>
+                  
             </main>
         
             <footer>
