--- a/about.html
+++ b/about.html
@@ -32,10 +32,10 @@
 
             <section>
                 <li>
-                    <a href="https://www.instagram.com/limitless.baseball/" target="_blank">
-                        <img src="images/instagram_icon.png" alt="Instagram"> @limitless.baseball
+                    <a href="https://www.instagram.com/limitless.baseball/" target="_blank" class="instagram-link">
+                        <img src="images/instagram_icon.png" alt="Instagram" class="instagram-icon"> @limitless.baseball
                     </a>
-                </li>
+                </li>                
                 <li><a href="https://calendly.com/limitlessbaseball-ut" class="btn">Book Lesson</a></li>
             </section>
             </ul>
@@ -59,7 +59,7 @@
             <div class="about-container">
                 <img src="images/about1.png" alt="Coach Breck Snyder" class="img-fluid">
                 <h2>Meet Coach Breck Snyder</h2>
-                <p>Ever since I first picked up my first baseball, this sport has been my life’s biggest passion. Whether I was playing wiffle ball with my cousins in the backyard or traveling for a comp league, the diamond has always been where I thrive.
+                <p>Ever since I first picked up a baseball, this sport has been my life’s biggest passion. Whether I was playing wiffle ball with my cousins in the backyard or traveling for a comp league, the diamond has always been where I thrive.
         
         For college, I played in Phoenix, Clarendon, Weber State, and was a co-founder of the University of Utah’s club team.
         
