--- a/gallery.html
+++ b/gallery.html
@@ -32,10 +32,10 @@
 
             <section>
                 <li>
-                    <a href="https://www.instagram.com/limitless.baseball/" target="_blank">
-                        <img src="images/instagram_icon.png" alt="Instagram"> @limitless.baseball
+                    <a href="https://www.instagram.com/limitless.baseball/" target="_blank" class="instagram-link">
+                        <img src="images/instagram_icon.png" alt="Instagram" class="instagram-icon"> @limitless.baseball
                     </a>
-                </li>
+                </li>                
                 <li><a href="https://calendly.com/limitlessbaseball-ut" class="btn">Book Lesson</a></li>
             </section>
             </ul>
