--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
             </section>
 
             <section>
-                <li>
-                    <a href="https://www.instagram.com/limitless.baseball/" target="_blank">
-                        <img src="images/instagram_icon.png" alt="Instagram"> @limitless.baseball
-                    </a>
-                </li>
+              <li>
+                <a href="https://www.instagram.com/limitless.baseball/" target="_blank" class="instagram-link">
+                    <img src="images/instagram_icon.png" alt="Instagram" class="instagram-icon"> @limitless.baseball
+                </a>
+            </li>            
                 <li><a href="https://calendly.com/limitlessbaseball-ut" class="btn">Book Lesson</a></li>
             </section>
             </ul>
