--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Limitless Baseball</title>
     <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -74,7 +75,6 @@
         
                         <div class="col-md-9"> 
                             <div class="special-requests">
-                                <h3>Special Requests</h3>
                                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScbst6eMgN7iIb3DWw82oigfXdfO623vqAKQewrNU2IsQ1kSg/viewform?embedded=true" 
                                 frameborder="0" 
                                 marginheight="0" 
