--- a/index.html
+++ b/index.html
@@ -72,18 +72,17 @@
         
         <div id="winter-clinic-overlay" class="overlay">
             <div class="overlay-content">
-              <h1>January Friday Sessions</h1>
-              <h2>Dates</h2>
-              <li>1/10, 1/17, 1/24, 1/31</li>
-              <li>4 players per slot</li>
-              <h2>Cost</h2>
-              <li>$250 Per Month</li>
-              <h2>Time Slots</h2>
-              <li>10/11u @ 5:00 - 6:30 PM</li>
-              <li>12/13y @ 6:30 - 8:00 PM</li>
-              <li> High School + 9th @ 8:00 - 9:30 PM</li>
-              <p>Interested? Please fill out the questionnaire below to secure their spot. 
-                We look forward to continuing to help players improve and get ready for the next season!</p>
+              <h1>Stay Tuned</h1>
+              <h2></h2>
+              <li></li>
+              <li></li>
+              <h2></h2>
+              <li>  </li>
+              <h2></h2>
+              <li></li>
+              <li></li>
+              <li> </li>
+              <p>No February Clinics. Upcoming availability is coming soon!</p>
               <a href="https://docs.google.com/forms/d/1KaeM4qzKm5nHvSvJG5t_GFHRHdfTrksy--IHvPhYdr0/viewform?edit_requested=true" target="_blank" class="btn btn-primary">Questionnaire</a>
               <button type="button" class="btn btn-secondary close-overlay-btn">Close</button>
             </div>
