--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@
         
         <div id="winter-clinic-overlay" class="overlay">
             <div class="overlay-content">
-              <h1>Stay Tuned</h1>
+              <h1>March Clinic</h1>
               <h2></h2>
               <li></li>
               <li></li>
-              <h2></h2>
+              <h2>Register February 24th</h2>
               <li>  </li>
               <h2></h2>
               <li></li>
               <li></li>
               <li> </li>
-              <p>No February Clinics. Upcoming availability is coming soon!</p>
+              <p>Details coming soon!</p>
               <a href="https://docs.google.com/forms/d/1KaeM4qzKm5nHvSvJG5t_GFHRHdfTrksy--IHvPhYdr0/viewform?edit_requested=true" target="_blank" class="btn btn-primary">Questionnaire</a>
               <button type="button" class="btn btn-secondary close-overlay-btn">Close</button>
             </div>
