--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
             <div class="overlay-content">
               <h1>March Clinic</h1>
               <h2></h2>
+              <li>Register February 24th</li>
               <li></li>
-              <li></li>
-              <h2>Register February 24th</h2>
+              <h2></h2>
               <li>  </li>
               <h2></h2>
               <li></li>
