--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <p>PITCHING. HITTING. FIELDING</p>
                     </div>
                 </div>
-                <button type="button" class="btn winter-clinic-btn">Monthly Clinic</button>
+                <button type="button" class="btn winter-clinic-btn">Upcoming Clinics</button>
             </div>
         </section>
         
