--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div></div>
             </div>
             <!-- Book Lesson Button -->
-            <a href="https://calendly.com/limitlessbaseball-ut" class="btn book-lesson">Book Lesson</a>
+            <a href="https://calendly.com/limitlessbaseball-ut" class="btn book-lesson" target="_blank" rel="noopener noreferrer">Book Lesson</a>
         </div>
 
         <!-- Desktop Navbar -->
@@ -37,7 +37,7 @@
                     <img src="images/instagram_icon.png" alt="Instagram" class="instagram-icon"> @limitless.baseball
                 </a>
             </li>            
-                <li><a href="https://calendly.com/limitlessbaseball-ut" class="btn">Book Lesson</a></li>
+                <li><a href="https://calendly.com/limitlessbaseball-ut" class="btn" target="_blank" rel="noopener noreferrer">Book Lesson</a></li>
             </section>
             </ul>
         </nav>
@@ -66,10 +66,24 @@
                         <p>PITCHING. HITTING. FIELDING</p>
                     </div>
                 </div>
-                <button type="button" class="btn winter-clinic-btn">Upcoming Clinics</button>
-            </div>
+                <!-- Banner Section -->
+<div class="announcement-banner">
+    <h2>Announcement Center</h2>
+    <p>The books are full this month but there’s good news! <br>
+        Clinic updates and 1:1 availability is coming <br>
+        <strong>February 24th.</strong>
+    </p>
+    <p>Join our <a href="https://forms.gle/yu5wUNBePK8izEpk6" class="waitlist-link" target="_blank" rel="noopener noreferrer">
+        <strong>waitlist!</strong></a>
+    </p>
+    
+    </div>
+        </div>
         </section>
         
+
+
+
         <div id="winter-clinic-overlay" class="overlay">
             <div class="overlay-content">
               <h1>March Clinic</h1>
@@ -105,15 +119,15 @@
               <div class="row">
                 <div class="col-md-4">
                   <img src="images/hitting.png" alt="Hitting Lesson" class="img-fluid">
-                  <a href="https://calendly.com/limitlessbaseball-ut/hitting-workout-1-hour?back=1&month=2024-12" class="lesson-buttons">Hitting Lessons</a>
+                  <a href="https://calendly.com/limitlessbaseball-ut/hitting-workout-1-hour?back=1&month=2024-12" class="lesson-buttons" target="_blank" rel="noopener noreferrer">Hitting Lessons</a>
                 </div>
                 <div class="col-md-4">
                   <img src="images/pitching.png" alt="Pitching Lesson" class="img-fluid">
-                  <a href="https://calendly.com/limitlessbaseball-ut/pitching-workout-1-hour?back=1&month=2024-12" class="lesson-buttons">Pitching Lessons</a>
+                  <a href="https://calendly.com/limitlessbaseball-ut/pitching-workout-1-hour?back=1&month=2024-12" class="lesson-buttons" target="_blank" rel="noopener noreferrer">Pitching Lessons</a>
                 </div>
                 <div class="col-md-4">
                   <img src="images/fielding.png" alt="Fielding Lesson" class="img-fluid">
-                  <a href="https://calendly.com/limitlessbaseball-ut/fielding-workout-1-hour?back=1&month=2024-12" class="lesson-buttons">Fielding Lessons</a>
+                  <a href="https://calendly.com/limitlessbaseball-ut/fielding-workout-1-hour?back=1&month=2024-12" class="lesson-buttons" target="_blank" rel="noopener noreferrer">Fielding Lessons</a>
                 </div>
               </div>
             </div>
@@ -149,7 +163,7 @@
                 <img src="images/footer_logo.png" alt="Baseball Logo">
             </div>
             <div class="contact-info">
-                <section><a href="https://calendly.com/limitlessbaseball-ut" class="btn2">Book Lesson</a></section>
+                <section><a href="https://calendly.com/limitlessbaseball-ut" class="btn2" target="_blank" rel="noopener noreferrer">Book Lesson</a></section>
                 <a href="https://www.instagram.com/limitless.baseball/" target="_blank">
                     <img src="images/instagram_icon2.png" alt="Instagram">
                     @limitless.baseball
