--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <div class="announcement-banner">
     <h2>Announcement Center</h2>
     <p>The books are full this month but there’s good news! <br>
-        Clinic updates and 1:1 availability is coming <br>
+        Clinic updates and availability for March is coming <br>
         <strong>February 24th.</strong>
     </p>
     <p>Join our <a href="https://forms.gle/yu5wUNBePK8izEpk6" class="waitlist-link" target="_blank" rel="noopener noreferrer">
