--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
                 <!-- Banner Section -->
 <div class="announcement-banner">
     <h2>Announcement Center</h2>
-    <p>The books are full this month but there’s good news! <br>
-        Clinic updates and availability for March is coming <br>
+    <p>February lessons are booked up but there’s good news! <br>
+        Clinic updates and availability for March lessons are coming <br>
         <strong>February 24th.</strong>
     </p>
-    <p>Join our <a href="https://forms.gle/yu5wUNBePK8izEpk6" class="waitlist-link" target="_blank" rel="noopener noreferrer">
+    <p>Join February's <a href="https://forms.gle/yu5wUNBePK8izEpk6" class="waitlist-link" target="_blank" rel="noopener noreferrer">
         <strong>waitlist!</strong></a>
     </p>
     
