--- a/index.html
+++ b/index.html
@@ -69,9 +69,8 @@
                 <!-- Banner Section -->
 <div class="announcement-banner">
     <h2>Announcement Center</h2>
-    <p>February lessons are booked up but there’s good news! <br>
-        Clinic updates and availability for March lessons are coming <br>
-        <strong>February 24th.</strong>
+    <p>March lessons are filled! <br>
+        Stay tuned for more availability updates and our next clinic announcement!
     </p>
     <p>Join February's <a href="https://forms.gle/yu5wUNBePK8izEpk6" class="waitlist-link" target="_blank" rel="noopener noreferrer">
         <strong>waitlist!</strong></a>
