--- a/index.html
+++ b/index.html
@@ -69,10 +69,11 @@
                 <!-- Banner Section -->
 <div class="announcement-banner">
     <h2>Announcement Center</h2>
-    <p>March lessons are filled! <br>
-        Stay tuned for more availability updates and our next clinic announcement!
+    <p>March lessons are filled up! <br>
+        Stay tuned for more availability updates 
+        <br> and our next clinic announcement!
     </p>
-    <p>Join February's <a href="https://forms.gle/yu5wUNBePK8izEpk6" class="waitlist-link" target="_blank" rel="noopener noreferrer">
+    <p>Join March's <a href="https://forms.gle/yu5wUNBePK8izEpk6" class="waitlist-link" target="_blank" rel="noopener noreferrer">
         <strong>waitlist!</strong></a>
     </p>
     
