--- a/index.html
+++ b/index.html
@@ -67,19 +67,17 @@
                     </div>
                 </div>
                 <!-- Banner Section -->
-<div class="announcement-banner">
-    <h2>Announcement Center</h2>
-    <p>March lessons are filled up! <br>
-        Stay tuned for more availability updates 
-        <br> and our next clinic announcement!
-    </p>
-    <p>Join March's <a href="https://forms.gle/yu5wUNBePK8izEpk6" class="waitlist-link" target="_blank" rel="noopener noreferrer">
-        <strong>waitlist!</strong></a>
-    </p>
-    
-    </div>
-        </div>
-        </section>
+                <div class="announcement-banner">
+                    <h2>Announcement Center</h2>
+                    <p>April lessons are now open! <br> See availability <a href="https://calendly.com/limitlessbaseball-ut" class="calendly-link" target="_blank" rel="noopener noreferrer"><strong>here.</strong>
+                    </a>    
+                    </p>
+                     <p>Join March's <a href="https://forms.gle/yu5wUNBePK8izEpk6" class="waitlist-link" target="_blank" rel="noopener noreferrer">
+                        <strong>waitlist!</strong></a>
+                    </p>    
+                </div>
+                    </div>
+                        </section>
         
 
 
