--- a/index.html
+++ b/index.html
@@ -66,18 +66,19 @@
                         <p>PITCHING. HITTING. FIELDING</p>
                     </div>
                 </div>
-                <!-- Banner Section -->
-                <div class="announcement-banner">
-                    <h2>Announcement Center</h2>
-                    <p>April lessons are now open! <br> See availability <a href="https://calendly.com/limitlessbaseball-ut" class="calendly-link" target="_blank" rel="noopener noreferrer"><strong>here.</strong>
-                    </a>    
-                    </p>
-                     <p>Join March's <a href="https://forms.gle/yu5wUNBePK8izEpk6" class="waitlist-link" target="_blank" rel="noopener noreferrer">
-                        <strong>waitlist!</strong></a>
-                    </p>    
+        <!-- Banner Section -->
+        <div class="announcement-banner">
+            <h2>Announcement Center</h2>
+            <p>April lessons are booked up.<br>
+                Stay tuned for more availability updates and our next clinic announcement!
+            </p>
+            <p>Join April's <a href="https://forms.gle/yu5wUNBePK8izEpk6" class="waitlist-link" target="_blank" rel="noopener noreferrer">
+                <strong>waitlist!</strong></a>
+            </p>
+            
+            </div>
                 </div>
-                    </div>
-                        </section>
+                </section>
         
 
 
