line break updtes

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <!-- Banner Section -->
                 <div class="announcement-banner">
                     <h2>Announcement Center</h2>
-                    <p>Limitless Baseball is currently focused on coaching <br>
+                    <p>Limitless Baseball is currently focused on coaching
                         travel ball and will be closed through May.<br>
                         June availability is to be determined. <br>
                     </p>
