remove booking update

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
                 <div></div>
             </div>
             <!-- Book Lesson Button -->
-            <a href="https://calendly.com/limitlessbaseball-ut" class="btn book-lesson" target="_blank"
-                rel="noopener noreferrer">Book Lesson</a>
+
         </div>
 
         <!-- Desktop Navbar -->
@@ -42,8 +41,6 @@
                             @limitless.baseball
                         </a>
                     </li>
-                    <li><a href="https://calendly.com/limitlessbaseball-ut" class="btn" target="_blank"
-                            rel="noopener noreferrer">Book Lesson</a></li>
                 </section>
             </ul>
         </nav>
@@ -75,9 +72,9 @@
                 <!-- Banner Section -->
                 <div class="announcement-banner">
                     <h2>Announcement Center</h2>
-                    <p>Limitless Baseball is currently focused on coaching
-                        travel ball and will be closed through May.<br>
-                        June availability is to be determined. <br>
+                    <p>Limitless Baseball is currently focused on coaching. Lessons will not be available for the
+                        foreseeable future.
+
                     </p>
 
 
@@ -128,18 +125,15 @@
                 <div class="row">
                     <div class="col-md-4">
                         <img src="images/hitting.png" alt="Hitting Lesson" class="img-fluid">
-                        <a href="https://calendly.com/limitlessbaseball-ut/hitting-workout-1-hour?back=1&month=2024-12"
-                            class="lesson-buttons" target="_blank" rel="noopener noreferrer">Hitting Lessons</a>
+                        <a>Hitting Lessons</a>
                     </div>
                     <div class="col-md-4">
                         <img src="images/pitching.png" alt="Pitching Lesson" class="img-fluid">
-                        <a href="https://calendly.com/limitlessbaseball-ut/pitching-workout-1-hour?back=1&month=2024-12"
-                            class="lesson-buttons" target="_blank" rel="noopener noreferrer">Pitching Lessons</a>
+                        <a>Pitching Lessons</a>
                     </div>
                     <div class="col-md-4">
                         <img src="images/fielding.png" alt="Fielding Lesson" class="img-fluid">
-                        <a href="https://calendly.com/limitlessbaseball-ut/fielding-workout-1-hour?back=1&month=2024-12"
-                            class="lesson-buttons" target="_blank" rel="noopener noreferrer">Fielding Lessons</a>
+                        <a>Fielding Lessons</a>
                     </div>
                 </div>
             </div>
@@ -170,8 +164,6 @@
                     <img src="images/footer_logo.png" alt="Baseball Logo">
                 </div>
                 <div class="contact-info">
-                    <section><a href="https://calendly.com/limitlessbaseball-ut" class="btn2" target="_blank"
-                            rel="noopener noreferrer">Book Lesson</a></section>
                     <a href="https://www.instagram.com/limitless.baseball/" target="_blank">
                         <img src="images/instagram_icon2.png" alt="Instagram">
                         @limitless.baseball
