--- a/gallery.html
+++ b/gallery.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Limitless Baseball</title>
     <link href="css/style.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <header>
         <!-- Mobile Header -->
@@ -18,27 +21,26 @@
                 <div></div>
             </div>
             <!-- Book Lesson Button -->
-            <a href="https://calendly.com/limitlessbaseball-ut" class="btn book-lesson">Book Lesson</a>
         </div>
 
         <!-- Desktop Navbar -->
         <nav>
             <ul class="navbar">
                 <section>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </section>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </section>
 
-            <section>
-                <li>
-                    <a href="https://www.instagram.com/limitless.baseball/" target="_blank" class="instagram-link">
-                        <img src="images/instagram_icon.png" alt="Instagram" class="instagram-icon"> @limitless.baseball
-                    </a>
-                </li>                
-                <li><a href="https://calendly.com/limitlessbaseball-ut" class="btn">Book Lesson</a></li>
-            </section>
+                <section>
+                    <li>
+                        <a href="https://www.instagram.com/limitless.baseball/" target="_blank" class="instagram-link">
+                            <img src="images/instagram_icon.png" alt="Instagram" class="instagram-icon">
+                            @limitless.baseball
+                        </a>
+                    </li>
+                </section>
             </ul>
         </nav>
 
@@ -59,39 +61,40 @@
 
         <section class="section-gallery" style="background-color: black;">
             <h2> GALLERY</h2>
-        <div class="gallery-container">
-            <!-- LightWidget WIDGET -->
-            <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
-            <iframe src="//lightwidget.com/widgets/cba9ca4441aa51bca7326a1a7d801afb.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
-        </div>    
+            <div class="gallery-container">
+                <!-- LightWidget WIDGET -->
+                <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
+                <iframe src="//lightwidget.com/widgets/cba9ca4441aa51bca7326a1a7d801afb.html" scrolling="no"
+                    allowtransparency="true" class="lightwidget-widget"
+                    style="width:100%;border:0;overflow:hidden;"></iframe>
+            </div>
         </section>
 
 
-        
+
 
 
     </main>
     <footer>
         <!-- Footer Content -->
         <section class="footer-row">
-        <div class="footer-container">
-            <div class="logo-container">
-                <img src="images/footer_logo.png" alt="Baseball Logo">
-            </div>
-            <div class="contact-info">
-                <section><a href="https://calendly.com/limitlessbaseball-ut" class="btn2">Book Lesson</a></section>
-                <a href="https://www.instagram.com/limitless.baseball/" target="_blank">
-                    <img src="images/instagram_icon2.png" alt="Instagram">
-                    @limitless.baseball
-                </a>
-                <p>801-663-6556</p>
-                <p><a href="mailto:limitlessbaseball.ut@gmail.com">limitlessbaseball.ut@gmail.com</a></p>
-            </div>
+            <div class="footer-container">
+                <div class="logo-container">
+                    <img src="images/footer_logo.png" alt="Baseball Logo">
+                </div>
+                <div class="contact-info">
+                    <a href="https://www.instagram.com/limitless.baseball/" target="_blank">
+                        <img src="images/instagram_icon2.png" alt="Instagram">
+                        @limitless.baseball
+                    </a>
+                    <p>801-663-6556</p>
+                    <p><a href="mailto:limitlessbaseball.ut@gmail.com">limitlessbaseball.ut@gmail.com</a></p>
+                </div>
         </section>
-            <div class="copy-write">
-                <p>&copy; 2023 by Limitless Baseball</p>
-                <p>Design by Logan Hood</p>
-            </div>
+        <div class="copy-write">
+            <p>&copy; 2023 by Limitless Baseball</p>
+            <p>Design by Logan Hood</p>
+        </div>
 
         </div>
 
@@ -101,4 +104,5 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script src="js/index.js"></script>
 </body>
+
 </html>
